Добавляет шапку, список и часть аккордеона на страницу

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="row">
                 <div class="col-12">
                     <h1 class="text-center text-white">Видео курс по верстке для начинающих HTML & CSS</h1>
-                    <div class="itd_play">
+                    <div class="itd_play" data-bs-toggle="modal" data-bs-target="#exampleModal">
                         <div class="itd_triangle"></div>
                     </div>
                     <a href="#footer" class="btn btn-itd btn-lg text-uppercase">Заказать</a>
@@ -26,7 +26,274 @@
 
         </div>
     </header>
-<footer id="footer">Футер</footer>
+    <section class="about">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <h2 class="text-center text-uppercase color1 mb-5">О курсе</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-xl-4 col-md-6 col-sm-12">
+                    <div class="itd_circle"><i class="icon-list-numbered"></i></div>
+                    <h5 class="text-center">Структурированный материал</h5>
+                    <div class="line"></div>
+                </div>
+                <div class="col-xl-4 col-md-6 col-sm-12">
+                    <div class="itd_circle"><i class="icon-rouble"></i></div>
+                    <h5 class="text-center">Символическая цена</h5>
+                    <div class="line"></div>
+                </div>
+                <div class="col-xl-4 col-md-6 col-sm-12">
+                    <div class="itd_circle"><i class="icon-chart-bar"></i></div>
+                    <h5 class="text-center">Актуальность и пожизненный доступ</h5>
+                    <div class="line"></div>
+                </div>
+                <div class="col-xl-4 col-md-6 col-sm-12">
+                    <div class="itd_circle"><i class="icon-code"></i></div>
+                    <h5 class="text-center">Практические уроки и задания</h5>
+                    <div class="line"></div>
+                </div>
+                <div class="col-xl-4 col-md-6 col-sm-12">
+                    <div class="itd_circle"><i class="icon-file-video"></i></div>
+                    <h5 class="text-center">34 видео в курсе (5 часов)</h5>
+                    <div class="line"></div>
+                </div>
+                <div class="col-xl-4 col-md-6 col-sm-12">
+                    <div class="itd_circle"><i class="icon-mobile"></i></div>
+                    <h5 class="text-center">Просмотр со смартфона</h5>
+                    <div class="line"></div>
+                </div>
+                <div class="col-xl-4 col-md-6 col-sm-12">
+                    <div class="itd_circle"><i class="icon-help"></i></div>
+                    <h5 class="text-center">Дополнительные полезные материалы</h5>
+                    <div class="line"></div>
+                </div>
+                <div class="col-xl-4 col-md-6 col-sm-12">
+                    <div class="itd_circle"><i class="icon-thumbs-up"></i></div>
+                    <h5 class="text-center">Отсутствует реклама</h5>
+                    <div class="line"></div>
+                </div>
+                <div class="col-xl-4 col-md-6 col-sm-12">
+                    <div class="itd_circle"><i class="icon-group"></i></div>
+                    <h5 class="text-center">Курс доступен в соцсетях</h5>
+                    <div class="line"></div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="forwhom">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <h2 class="text-center text-uppercase color2 mb-5">Курс для тех, кто:</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="row mb-5">
+                    <div class="col-md-6 col-sm-12">
+                        <h5 class="text-center">Хочет научиться создавать сайты своими силами</h5>
+                    </div>
+                    <div class="col-md-6 col-sm-12">
+                        <h5 class="text-center">Учится современным инструментам разработки</h5>
+                    </div>
+                    <div class="col-md-6 col-sm-12">
+                        <h5 class="text-center">Еще не знает язык HTML и CSS, но хочет выучить</h5>
+                    </div>
+                    <div class="col-md-6 col-sm-12">
+                        <h5 class="text-center">Хочет стать крутым мастером и зарабатывать деньги</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-12">
+                    <a href="#footer" class="btn btn-lg text-uppercase btn-itd">Заказать</a>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="shedule">
+        <div class="container">
+            <div class="row">
+                <div class="col-12">
+                    <h2 class="text-center text-uppercase color2 mb-3">Программа курса</h2>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-md-4 col-sm-12">
+                    <h4 class="text-center fw-bold mb-3 mt-3">Модуль 1<br>(HTML)</h4>
+                    <div class="accordion accordion-flush" id="accordionFlush1">
+                        <div class="accordion-item">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#flush-collapseOne" aria-expanded="false"
+                                    aria-controls="flush-collapseOne">
+                                    Введение
+                                </button>
+                            </h2>
+                            <div id="flush-collapseOne" class="accordion-collapse collapse show"
+                                data-bs-parent="#accordionFlush1">
+                                <div class="accordion-body fst-italic">Краткий обзор того, что мы будем изучать в данном видео
+                                    курсе.</div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#flush-collapseTwo" aria-expanded="false"
+                                    aria-controls="flush-collapseTwo">
+                                    Установка браузера и редактора кода
+                                </button>
+                            </h2>
+                            <div id="flush-collapseTwo" class="accordion-collapse collapse"
+                                data-bs-parent="#accordionFlush1">
+                                <div class="accordion-body fst-italic">В этом уроке мы установим браузер Google Chrome и редактор
+                                    кода VS Code.</div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#flush-collapseThree" aria-expanded="false"
+                                    aria-controls="flush-collapseThree">
+                                    Обзор функций редактора
+                                </button>
+                            </h2>
+                            <div id="flush-collapseThree" class="accordion-collapse collapse"
+                                data-bs-parent="#accordionFlush1">
+                                <div class="accordion-body fst-italic">Рассмотрим функции редактора VS Code и узнаем как с ним
+                                    работать.</div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#flush-collapseFour" aria-expanded="false"
+                                    aria-controls="flush-collapseFour">
+                                    Первые HTML теги
+                                </button>
+                            </h2>
+                            <div id="flush-collapseFour" class="accordion-collapse collapse"
+                                data-bs-parent="#accordionFlush1">
+                                <div class="accordion-body fst-italic">Выучим свои первые HTML теги, с помощью которых и создаются любые сайты.</div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#flush-collapseFive" aria-expanded="false"
+                                    aria-controls="flush-collapseFive">
+                                    Как задавать путь к файлу
+                                </button>
+                            </h2>
+                            <div id="flush-collapseFive" class="accordion-collapse collapse"
+                                data-bs-parent="#accordionFlush1">
+                                <div class="accordion-body fst-italic">Научимся правильно указывать путь к файлам изображений и другим страницам сайта.</div>
+                            </div>
+                        </div>
+
+                        <div class="accordion-item">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#flush-collapseSix" aria-expanded="false"
+                                    aria-controls="flush-collapseSix">
+                                    Создание списка
+                                </button>
+                            </h2>
+                            <div id="flush-collapseSix" class="accordion-collapse collapse"
+                                data-bs-parent="#accordionFlush1">
+                                <div class="accordion-body fst-italic">Научимся создавать списки на своем сайте.</div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#flush-collapseSeven" aria-expanded="false"
+                                    aria-controls="flush-collapseSeven">
+                                    Создание таблиц
+                                </button>
+                            </h2>
+                            <div id="flush-collapseSeven" class="accordion-collapse collapse"
+                                data-bs-parent="#accordionFlush1">
+                                <div class="accordion-body fst-italic">В этом уроке мы рассмотри, как создавать таблицы на языке HTML.</div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#flush-collapseEight" aria-expanded="false"
+                                    aria-controls="flush-collapseEight">
+                                    Работа с текстом
+                                </button>
+                            </h2>
+                            <div id="flush-collapseEight" class="accordion-collapse collapse"
+                                data-bs-parent="#accordionFlush1">
+                                <div class="accordion-body fst-italic">В этом видео уроке мы узнаем, как работать с текстом.</div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#flush-collapseNine" aria-expanded="false"
+                                    aria-controls="flush-collapseNine">
+                                    Создание формы
+                                </button>
+                            </h2>
+                            <div id="flush-collapseNine" class="accordion-collapse collapse"
+                                data-bs-parent="#accordionFlush1">
+                                <div class="accordion-body fst-italic">Научимся создавать формы для ввода текста, флажки и кнопки.</div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#flush-collapseTen" aria-expanded="false"
+                                    aria-controls="flush-collapseTen">
+                                    Универсальные атрибуты
+                                </button>
+                            </h2>
+                            <div id="flush-collapseTen" class="accordion-collapse collapse"
+                                data-bs-parent="#accordionFlush1">
+                                <div class="accordion-body fst-italic">Рассмотрим универсальные атрибуты, которые можно добавлять любому HTML тегу.</div>
+                            </div>
+                        </div>
+                        <div class="accordion-item">
+                            <h2 class="accordion-header">
+                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse"
+                                    data-bs-target="#flush-collapseEleven" aria-expanded="false"
+                                    aria-controls="flush-collapseEleven">
+                                    Цвет RGB и специальные символы
+                                </button>
+                            </h2>
+                            <div id="flush-collapseEleven" class="accordion-collapse collapse"
+                                data-bs-parent="#accordionFlush1">
+                                <div class="accordion-body fst-italic">Научимся работать с RGB цветом и добавлять специальные символы на свой сайт.</div>
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+    <footer id="footer"></footer>
+
+    <!-- Modal -->
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h1 class="modal-title fs-5" id="exampleModalLabel">Трейлер видео курса по HTML & CSS</h1>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <div class='embed-container'>
+                        <iframe src='https://www.youtube.com/embed/41tdjZWeCH0' allowfullscreen></iframe>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="js/bootstrap.bundle.min.js"></script>
 </body>
 
